adding some data classes ported from DCA, fixing up the includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,9 @@
+# // Copyright (C) 2024 UT-Battelle, LLC
+# // All rights reserved.
+# //
+# // See LICENSE for terms of usage.
+# //
+
 ######################################################################
 # CMake version and policies
 ######################################################################
@@ -35,7 +41,7 @@ endif(USE_MPI)
 option(ENABLE_CUDA "Build with GPU support through CUDA" OFF)
 option(ENABLE_HIP  "Build with GPU support through HIP" OFF)
 set(ENABLE_GPU "$<IF:$<OR:$<BOOL:${ENABLE_CUDA}>,$<BOOL:${ENABLE_CUDA}>>,ON,OFF>")
-
+message ("enable gpu: ${ENABLE_GPU}")
 set(MRPAPP_GPU_LIBS "" CACHE INTERNAL "")
 
 if(ENABLE_GPU)
@@ -45,10 +51,9 @@ if(ENABLE_GPU)
   if(ENABLE_HIP)
     include(mrapp_hip)
   endif(ENABLE_HIP)
-
   if(MRPAPP_HAVE_CUDA OR MRPAPP_HAVE_HIP)
     include(DetermineDeviceArchitectures)
-    message(STATUS "GPU device architectures: ${QMC_GPU_ARCHS}")
+    message(STATUS "GPU device architectures: ${MRPAPP_GPU_ARCHS}")
   endif()
 endif(ENABLE_GPU)
 
@@ -60,6 +65,9 @@ set(MRPAPP_SRC
 
 set(MRPAPP_MODEL "1BAND" CACHE STRING "RPA model options")
 set_property(CACHE MRPAPP_MODEL PROPERTY STRINGS SRRUO SRRUO3D SRRUO3DSUH 1BAND 1BANDWSPIN BILAYER_FESC BILAYER_1BAND ORTHOIIBILAYER BSCCOBILAYER BILAYER_FESC BAFEAS KFE2SE2 FOURORBITAL TBFILE COUPLEDLADDERS NDNIO2 MODELFROMFILESO KAGOME 1BANDABWSPIN 1BANDALTERMAGNET 1BANDAB)
+
+include(mrpapp_defines)
+mrpapp_write_definitions_file()
 
 add_executable(mrpapp ${MRPAPP_SRC})
 target_include_directories(mrpapp PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
@@ -74,4 +82,5 @@ set(mpi_targs MPI::MPI_C MPI::MPI_CXX)
 set(MPI_TARGETS "$<$<BOOL:${MPI_FOUND}>:${mpi_targs}>")
 target_link_libraries(mrpapp ${MRPAPP_GPU_LIBS} LAPACK::LAPACK BLAS::BLAS ${MPI_TARGETS} )
 
-add_custom_target(genexdebug COMMAND ${CMAKE_COMMAND} -E echo "$<$<BOOL:${MPI_FOUND}>:USE_MPI>")
+add_custom_target(genexdebug COMMAND ${CMAKE_COMMAND} -E echo "$<IF:$<OR:$<BOOL:${ENABLE_CUDA}>,$<BOOL:${ENABLE_CUDA}>>,ON,OFF>")
+#$<$<BOOL:${MPI_FOUND}>:USE_MPI>")
