--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,10 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 set(PROJECT_CMAKE ${mrpapp_SOURCE_DIR}/CMake)
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_CMAKE})
 
-set(QMC_CXX_STANDARD
+set(MRPAPP_CXX_STANDARD
     17
     CACHE STRING "MRPAPP C++ language standard")
-if(NOT QMC_CXX_STANDARD EQUAL 17)
+if(NOT MRPAPP_CXX_STANDARD EQUAL 17)
   message(WARNING "C++17 is the only language standard officially supported by this MRPAPP version. "
                   "Using other versions of the C++ standard is unsupported and done entirely at user's own risk.")
 endif()
@@ -60,8 +60,27 @@ endif(ENABLE_GPU)
 find_package(LAPACK REQUIRED)
 find_package(BLAS REQUIRED)
 
+include(ExternalProject)
+find_package(Git REQUIRED)
+
+find_package(Catch2 3)
+if (NOT CATCH2_FOUND)
+ExternalProject_Add(
+  catch2
+  PREFIX ${CMAKE_BINARY_DIR}/catch2
+  GIT_REPOSITORY git@github.com:catchorg/Catch2.git
+  GIT_TAG devel
+  TIMEOUT 30
+  UPDATE_COMMAND ${GIT_EXECUTABLE} pull
+  CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/catch2"
+  LOG_DOWNLOAD ON)
+
+set(CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR}/catch2)
+find_package(Catch2 3 REQUIRED)
+endif()
+
 set(MRPAPP_SRC
-  main.cpp)
+main.cpp)
 
 set(MRPAPP_MODEL "1BAND" CACHE STRING "RPA model options")
 set_property(CACHE MRPAPP_MODEL PROPERTY STRINGS SRRUO SRRUO3D SRRUO3DSUH 1BAND 1BANDWSPIN BILAYER_FESC BILAYER_1BAND ORTHOIIBILAYER BSCCOBILAYER BILAYER_FESC BAFEAS KFE2SE2 FOURORBITAL TBFILE COUPLEDLADDERS NDNIO2 MODELFROMFILESO KAGOME 1BANDABWSPIN 1BANDALTERMAGNET 1BANDAB)
@@ -70,7 +89,7 @@ include(mrpapp_defines)
 mrpapp_write_definitions_file()
 
 include(mrpapp_linking)
-add_subdirectory(linalg/util)
+add_subdirectory(linalg)
 
 add_executable(mrpapp ${MRPAPP_SRC})
 target_include_directories(mrpapp PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
@@ -87,3 +106,5 @@ target_link_libraries(mrpapp ${MRPAPP_GPU_LIBS} LAPACK::LAPACK BLAS::BLAS ${MPI_
 
 add_custom_target(genexdebug COMMAND ${CMAKE_COMMAND} -E echo "$<IF:$<OR:$<BOOL:${ENABLE_CUDA}>,$<BOOL:${ENABLE_CUDA}>>,ON,OFF>")
 #$<$<BOOL:${MPI_FOUND}>:USE_MPI>")
+
+include(mrpapp_tests)
