--- a/linalg/CMakeLists.txt
+++ b/linalg/CMakeLists.txt
@@ -1,10 +1,9 @@
-add_subdirectory(util)
-
 set(srcs vector.cpp)
 add_library(linalg STATIC ${srcs})
 target_include_directories(linalg PUBLIC
 "${PROJECT_SOURCE_DIR};${PROJECT_BINARY_DIR};${PROJECT_SOURCE_DIR}/linalg;${PROJECT_SOURCE_DIR}/linalg/util")
 
+target_link_libraries(linalg PUBLIC platform)
 
 if(MRPAPP_HAVE_GPU)
    target_link_libraries(linalg PRIVATE gpu_utils)
