--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -1,5 +1,10 @@
 # cuda and cublas utils
 
+set(srcs allocators/aligned_allocator.cpp)
+add_library(platform STATIC ${srcs})
+target_include_directories(platform PUBLIC
+"${PROJECT_SOURCE_DIR};${PROJECT_BINARY_DIR};${PROJECT_SOURCE_DIR}/platform;")
+
 if(MRPAPP_HAVE_GPU)
   set(srcs util_gpublas.cpp error_gpuBLAS.cpp info_gpu.cpp error_gpu.cpp)
   add_library(gpu_utils STATIC ${srcs})
